# whisperx-batch

./: README.md  pyproject.toml
src/whisperx_batch/: __init__.py  actors.py  batch.py
