[project]
name = "whisperx-batch"
urls = { repository = "https://github.com/olastor/whisperx-batch" }
version = "0.1.0"
description = "Improved batch inference for transcribing multiple audio files using WhisperX and Ray."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ray[data,default]>=2.53.0",
    "whisperx>=3.7.4",
]
license = { text = "BSD-2-Clause" }

[project.scripts]
whisperx-batch = "whisperx_batch:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
